--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "dependencies": {
         "at.js": "^1.5.4",
         "jquery.caret": "^0.3.1",
-        "moment": "^2.24.0"
+        "moment": "^2.24.0",
+        "trix": "^1.1.1",
+        "vue-instantsearch": "^2.2.2"
     }
 }
